--- a/templates/deleteteam.html
+++ b/templates/deleteteam.html
@@ -10,8 +10,19 @@
 </head>
 <body>
 <div class="top-banner">
-    <p>CRICKET TEAM SUBMISSION APP</p>
-    <a class="button">Login</a>
+    <p><a href="{{ url_for('show_teams') }}">CRICKET TEAM SUBMISSION APP</a></p>
+    <div class="login">
+        <div class="button">
+            {% if 'username' not in session %}
+                <a href="{{ url_for('showLogin') }}">Login</a>
+            {% else %}
+                <a href="{{ url_for('disconnect') }}">Logout</a>
+            {% endif %}
+        </div>
+        <figure class="creator">
+            <img src="{{ creator.picture }}">
+        </figure>
+    </div>
 </div>
 <div class="pane">
     <h1>Are you Sure you want to delete Team {{ team.name }}?</h1>
@@ -21,6 +32,10 @@
             <a href="{{ url_for('show_teams') }}">Cancel</a>
         </form>
     </div>
+    <footer>
+        <hr>
+        <p align="center">&circledR; Registered Trademark of Shubham Prakash Jha</p>
+    </footer>
 </div>
 </body>
 </html>
