--- a/templates/editteam.html
+++ b/templates/editteam.html
@@ -10,8 +10,19 @@
 </head>
 <body>
 <div class="top-banner">
-    <p>CRICKET TEAM SUBMISSION APP</p>
-    <a class="button">Login</a>
+    <p><a href="{{ url_for('show_teams') }}">CRICKET TEAM SUBMISSION APP</a></p>
+    <div class="login">
+        <div class="button">
+            {% if 'username' not in session %}
+                <a href="{{ url_for('showLogin') }}">Login</a>
+            {% else %}
+                <a href="{{ url_for('disconnect') }}">Logout</a>
+            {% endif %}
+        </div>
+        <figure class="creator">
+            <img src="{{ creator.picture }}">
+        </figure>
+    </div>
 </div>
 <div class="pane"><h1>Edit Name of Team {{ team.name }}</h1>
     <div class="teamminipane">
@@ -24,6 +35,11 @@
             <input type="submit" name="Update">
             <a href="{{ url_for('show_teams') }}">Cancel</a>
     </div>
-    </form></div>
+    </form>
+    <footer>
+        <hr>
+        <p align="center">&circledR; Registered Trademark of Shubham Prakash Jha</p>
+    </footer>
+</div>
 </body>
 </html>
