--- a/templates/publicplayers.html
+++ b/templates/publicplayers.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="top-banner">
-    <p>CRICKET TEAM SUBMISSION APP</p>
+    <p><a href="{{ url_for('show_teams') }}">CRICKET TEAM SUBMISSION APP</a></p>
     <div class="login">
         <div class="button">
             {% if 'username' not in session %}
@@ -73,7 +73,7 @@
     </div>
     <footer>
         <hr>
-        <p align="center">Click on Team Name to go back</p>
+        <p align="center">&circledR; Registered Trademark of Shubham Prakash Jha</p>
     </footer>
 </div>
 </body>
