--- a/templates/publicteams.html
+++ b/templates/publicteams.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="top-banner">
-    <p>CRICKET TEAM SUBMISSION APP</p>
+    <p><a href="{{ url_for('show_teams') }}">CRICKET TEAM SUBMISSION APP</a></p>
     <div class="login">
         <div class="button">
             {% if 'username' not in session %}
