--- a/templates/teams.html
+++ b/templates/teams.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="top-banner">
-    <p>CRICKET TEAM SUBMISSION APP</p>
+    <p><a href="{{ url_for('show_teams') }}">CRICKET TEAM SUBMISSION APP</a></p>
     <div class="login">
         <div class="button">
             {% if 'username' not in session %}
@@ -20,7 +20,7 @@
             {% endif %}
         </div>
         <figure class="creator">
-            <img src="{{ url_for('static', filename='blank_user.gif') }}">
+            <img src="{{ creator.picture }}">
         </figure>
     </div>
 </div>
