--- a/static/styles.css
+++ b/static/styles.css
@@ -34,7 +34,7 @@ h3 {
     margin-bottom: 5px;
 }
 
-p{
+p {
     color: #fffffb;
     margin-bottom: 2px;
 }
@@ -57,6 +57,11 @@ a {
 
 hr {
     border: 1.5px white solid;
+}
+
+p a {
+    color: white;
+    box-shadow: 0px 0px 0px black;
 }
 
 .pane {
@@ -258,7 +263,7 @@ div.flexcontainer {
     right: 0px;
 }
 
-.button{
+.button {
     color: white;
     position: absolute;
     /* right: 149px; */
@@ -268,7 +273,7 @@ div.flexcontainer {
     /* padding: 3px; */
 }
 
-.creator img{
+.creator img {
     height: 32px;
     width: 32px;
     position: absolute;
@@ -277,7 +282,10 @@ div.flexcontainer {
     border-radius: 50%;
 }
 
-.login{position: absolute;right: 12%;}
+.login {
+    position: absolute;
+    right: 12%;
+}
 
 /*@media screen and (max-width: 1200px) {*/
 /*.flexcontainer > h2 {*/
