--- a/templates/newplayer.html
+++ b/templates/newplayer.html
@@ -14,7 +14,7 @@
     <div class="login">
         <div class="button">
             {% if 'username' not in session %}
-                <a href="{{ url_for('showLogin') }}">Login</a>
+                <a href="{{ url_for('show_login') }}">Login</a>
             {% else %}
                 <a href="{{ url_for('disconnect') }}">Logout</a>
             {% endif %}
