--- a/static/styles.css
+++ b/static/styles.css
@@ -26,7 +26,7 @@ h1 {
 h2 {
     font-size: 1.2em;
     /* border-bottom: 2px solid #b82820; */
-    padding: 5px 0px;
+    padding: 5px 0;
 }
 
 h3 {
@@ -61,7 +61,7 @@ hr {
 
 p a {
     color: white;
-    box-shadow: 0px 0px 0px black;
+    box-shadow: 0 0 0 black;
 }
 
 .pane {
@@ -80,7 +80,7 @@ p a {
     width: 70%;
     /* min-width: 40%; */
     /* min-height: 90%; */
-    box-shadow: -12px 20px 20px 0px black;
+    box-shadow: -12px 20px 20px 0 black;
 }
 
 @media screen and (max-width: 620px) {
@@ -99,7 +99,7 @@ p a {
         /* width: 80%; */
         /* min-width: 40%; */
         /* min-height: 100%; */
-        box-shadow: -12px 20px 20px 0px black;
+        box-shadow: -12px 20px 20px 0 black;
     }
 }
 
@@ -119,7 +119,7 @@ p a {
         /* width: 80%; */
         /* min-width: 40%; */
         /* min-height: 100%; */
-        box-shadow: -12px 20px 20px 0px black;
+        box-shadow: -12px 20px 20px 0 black;
     }
 }
 
@@ -142,7 +142,7 @@ p a {
     height: 495px;
     /* max-width: 309px; */
     /* min-height: 100%; */
-    box-shadow: -4px 6px 20px 0px black;
+    box-shadow: -4px 6px 20px 0 black;
 }
 
 .teamminipane {
@@ -163,7 +163,7 @@ p a {
     height: 250px;
     /* max-width: 309px; */
     /* min-height: 100%; */
-    box-shadow: -4px 6px 20px 0px black;
+    box-shadow: -4px 6px 20px 0 black;
 }
 
 .header {
@@ -249,7 +249,7 @@ div.flexcontainer {
     /* width: 96%; */
     /*!* min-width: 40%; *!*/
     /*!* min-height: 100%; *!*/
-    box-shadow: -1px 1px 20px 0px black;
+    box-shadow: -1px 1px 20px 0 black;
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
@@ -260,7 +260,7 @@ div.flexcontainer {
     width: 100%;
     /* background-color: #f5f4c3; */
     margin-top: -8px;
-    right: 0px;
+    right: 0;
 }
 
 .button {
@@ -285,6 +285,10 @@ div.flexcontainer {
 .login {
     position: absolute;
     right: 12%;
+}
+
+#result {
+    color: #fff;
 }
 
 /*@media screen and (max-width: 1200px) {*/
