--- a/templates/editplayer.html
+++ b/templates/editplayer.html
@@ -112,7 +112,7 @@
                 <input type="text" name="image_url" size="24px" placeholder="{{ player.image_url }}">
             </label><br><br>
             <input type="submit" value="create">
-            <a href="{{ url_for('show_players', team_id=team.id) }}" size="24px">Cancel</a>
+            <a href="{{ url_for('show_players', team_id=team.id) }}">Cancel</a>
         </form>
     </div>
     <footer>
