--- a/templates/deleteplayer.html
+++ b/templates/deleteplayer.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 <div class="top-banner">
-    <p><a href="{{ url_for('show_teams') }}">CRICKET TEAM SUBMISSION APP</a></p>
+    <p><a href="{{ url_for('show_teams') }}">CRICKET TEAM SUBMISSION APP</a>
+    </p>
     <div class="login">
         <div class="button">
             {% if 'username' not in session %}
@@ -27,7 +28,8 @@
 <div class="pane">
     <h1>Are you Sure you want to Delete {{ player.name }} profile?</h1>
     <div class="minipane">
-        <form action="{{ url_for('delete_player', team_id=team.id, player_id=player.id) }}" method="post">
+        <form action="{{ url_for('delete_player', team_id=team.id, player_id=player.id) }}"
+              method="post">
             <input type="submit" value="Delete">
             <a href="{{ url_for('show_players', team_id=team.id) }}">Cancel</a>
 
@@ -35,7 +37,8 @@
     </div>
     <footer>
         <hr>
-        <p align="center">&circledR; Registered Trademark of Shubham Prakash Jha</p>
+        <p align="center">&circledR; Registered Trademark of Shubham Prakash
+            Jha</p>
     </footer>
 </div>
 </body>
