--- a/templates/deleteteam.html
+++ b/templates/deleteteam.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 <div class="top-banner">
-    <p><a href="{{ url_for('show_teams') }}">CRICKET TEAM SUBMISSION APP</a></p>
+    <p><a href="{{ url_for('show_teams') }}">CRICKET TEAM SUBMISSION APP</a>
+    </p>
     <div class="login">
         <div class="button">
             {% if 'username' not in session %}
@@ -27,14 +28,16 @@
 <div class="pane">
     <h1>Are you Sure you want to delete Team {{ team.name }}?</h1>
     <div class="teamminipane">
-        <form action="{{ url_for('delete_team', team_id=team.id) }}" method="post">
+        <form action="{{ url_for('delete_team', team_id=team.id) }}"
+              method="post">
             <input type="Submit" value="Delete">
             <a href="{{ url_for('show_teams') }}">Cancel</a>
         </form>
     </div>
     <footer>
         <hr>
-        <p align="center">&circledR; Registered Trademark of Shubham Prakash Jha</p>
+        <p align="center">&circledR; Registered Trademark of Shubham Prakash
+            Jha</p>
     </footer>
 </div>
 </body>
