--- a/templates/newteam.html
+++ b/templates/newteam.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 <div class="top-banner">
-    <p><a href="{{ url_for('show_teams') }}">CRICKET TEAM SUBMISSION APP</a></p>
+    <p><a href="{{ url_for('show_teams') }}">CRICKET TEAM SUBMISSION APP</a>
+    </p>
     <div class="login">
         <div class="button">
             {% if 'username' not in session %}
@@ -29,10 +30,12 @@
     <div class="teamminipane">
         <form action="{{ url_for('new_team') }}" method="post">
             <label for="name">Name: <br>
-                <input type="text" name="name" placeholder="Add new Team" size="30px">
+                <input type="text" name="name" placeholder="Add new Team"
+                       size="30px">
             </label><br><br>
             <label for="image_url">Image Url: <br>
-                <input type="text" name="image_url" placeholder="Add image url" size="30px">
+                <input type="text" name="image_url" placeholder="Add image url"
+                       size="30px">
             </label><br><br>
             <input type="submit" value="Create">
             <a href="{{ url_for('show_teams') }}">Cancel</a>
@@ -40,7 +43,8 @@
     </div>
     <footer>
         <hr>
-        <p align="center">&circledR; Registered Trademark of Shubham Prakash Jha</p>
+        <p align="center">&circledR; Registered Trademark of Shubham Prakash
+            Jha</p>
     </footer>
 </div>
 </body>
