--- a/templates/newplayer.html
+++ b/templates/newplayer.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div class="top-banner">
-    <<p><a href="{{ url_for('show_teams') }}">CRICKET TEAM SUBMISSION APP</a>
-</p>
+    <p><a href="{{ url_for('show_teams') }}">CRICKET TEAM SUBMISSION APP</a>
+    </p>
     <div class="login">
         <div class="button">
             {% if 'username' not in session %}
